--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
 </head>
 <body>
     <div id="title">good morning rose</div>
+    <script>
+        const dom = document.getElementById('title');
+        console.log(dom.clientWidth);
+        dom.style.width = '170px';
+        console.log(dom.clientWidth);
+
+    </script>
 </body>
 </html>
