--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="title">good morning rose</div>
+    <div id="title">good morning</div>
     <script>
         const dom = document.getElementById('title');
         console.log(dom.clientWidth);
